--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -91,15 +91,8 @@ ko:
         too_short: "너무 짧습니다(최소 %{count}자)"
         wrong_length: "길이가 틀립니다(%{count}자 여야 함)"
       models: 
-        comment: 
-          attributes: 
-            body: 
-              no_body_generic: "위 박스에서 한 것과 같이 작성해주시기 바랍니다."
-              no_body_task: "이 테스크에 대해 위 박스에서 한 것과 같이 작성해주시기 바랍니다."
         conversation: 
           attributes: 
-            body: 
-              no_body_generic: "대화를 시작하시려면 코멘트를 작성해주시기 바랍니다."
             name: 
               no_title: "이 대화에 제목을 달아주시기 바랍니다."
     models: 
@@ -729,9 +722,6 @@ ko:
       subject: "%{user}님이 프로젝트 [%{project}]를 공유 했습니다."
       teambox_is_a_pm_platform: "팀박스는 real-world 협업을 하기위한 프로젝트 관리 플렛폼입니다."
       you_have_been_invited_to: "프로젝트 <b>%{project}</b>에 초대되셨습니다."
-    invitation_group: 
-      subject: "%{user}님이 그룹 [%{group}]을 공유하셨습니다."
-      you_have_been_invited_to: "그룹 <b>%{group}</b>에 초대되었습니다."
     notify: 
       are_watching: " 이 대화를 구독하고 있으며 이후 답글들에 대해 알려드리겠습니다."
       assigned_to: "<b>%{user}</b>님에게 할당되었습니다."
@@ -742,7 +732,6 @@ ko:
       my_tasks: "%{project}에 할당된 테스크들이 더 있습니다."
       notification_settings: "<a href='%{url}'>알림 설정</a>을 통해 이메일 알림을 바꿀 수 있습니다."
       project: "팀박스 프로젝트:"
-      recent_conversations: "%{project}의 최근 대화"
       reply: "이 이메일에 대한 답장을 보냄으로써 대화에 답글을 남기실 수 있습니다."
       status: "상태: %{status}"
       stop_watching: "알림 이메일을 거절하기 위해 이 글타래에 대해 <a href='%{stop_watching_url}'>살펴보기를 멈춤니다</a>."
@@ -759,7 +748,6 @@ ko:
       subject: "패스워드가 성공적으로 리셋되었습니다."
     upload: 
       file: "파일:"
-      uploaded_by: 업로더
   example_projects: 
     new: 
       create: "예제 프로젝트 생성"
@@ -815,9 +803,7 @@ ko:
       time_ago: "(%{time_ago_in_words} 이전)"
     pending: 
       invited_to_join: "%{by}님께서 %{project} 프로젝트에 초대하셨습니다."
-      invited_to_join_group: "%{by}님께서 %{group} 그룹에 초대하셨습니다."
       to_access_or: "to access the project or"
-      to_access_or_group: "to access the group or"
     recent: 
       invite: "%{username}님을 초대"
     resend: 
@@ -838,7 +824,6 @@ ko:
     ko: 한국어
   not_found: 
     conversation: "해당 대화내용%{id} 이 이 프로젝트에서 검색되지 않았습니다."
-    group: "그룹 %{id}이 존재하지 않습니다."
     page: "페이지%{id}."
     project: "프로젝트%{id}가 존재하지 않습니다."
     task: "이 프로젝트에서는 테스크%{id}가 검색되지 않았습니다."
@@ -865,6 +850,7 @@ ko:
     format: 
       delimiter: ","
       separator: "."
+      precision: 2
     human: 
       storage_units: 
         format: "%n %u"
@@ -1433,6 +1419,9 @@ ko:
       title: "최근 활동 피드 싱크"
       your_feeds: "뉴스 피드"
     form: 
+      biography: 자기소개
+      change_password: "패스워드 수정"
+      confirm_password: "패스워드 확인"
       delete: 
         account_deleted: "계정이 삭제되었습니다. 감사합니다."
         couldnt_delete_account: "아직 삭제되지 않은 프로젝트가 있어서 계정삭제가 되지 않았습니다."
@@ -1460,15 +1449,24 @@ ko:
       last_name: 이름
       login: "로그인 아이디"
       monday: 월요일
-      notifications:
+      new: 
+        use_this_email: "이 이메일 주소로 프로젝트를 공유할 수 있는 초대권을 받으셨습니다. 만약 이 프로젝트들에 접근하시고 싶으시다면 이메일을 변경하지 말아주세요. 등록 절차를 한번 거치고 나서 이메일 주소를 수정할 수 있습니다."
+      notifications: 
         notify_conversations: "대화를 \"살펴보기\" 하면 알림"
-        notify_mentions: "예를 들어 Howdy @%{login}을 언급하게 되면 알려주세요. 이메일을 발송해 드립니다."
         notify_tasks: "테스크를 \"살펴보기\" 하면 알림"
         wants_task_reminder: "매일 내 테스크들에 대한 이메일 보내기"
       password: 패스워드
       password_confirmation: "패스워드 확인"
       phone: 전화번호
       phone_for_integration: "(선택사항) 차후 SMS 문자메세지 발송 기능이 추가 될 예정입니다."
+      picture: 
+        destroy: "아바타 삭제"
+        field: "새로운 아바타"
+        gravatar_in_use: "사진이 업로드 되어있지 않습니디. 다음의 기본 사진을 아바타로 사용하겠습니다 %{gravatar}:"
+        max_size: " 파일 크기는 %{mb} 메가 를 넘을 수 없습니다."
+        presence: " 파일을 첨부해주시기 바랍니다."
+        upload_here_or_at_gravatar: "사진을 업로드 하거나 다음중에서 고를 수 있습니다. %{gravatar}."
+        we_have_this_avatar: "다음의 사진이 업로드 되어 있습니다 :"
       sunday: 일요일
       time_zone: 시간대
       tooltips: 
@@ -1478,8 +1476,6 @@ ko:
         login: "로그인하기 위한 계정이 필요합니다. 계정이름으로 다른사람들이 당신을 찾을 수 있습니다. 반드시 소문자를 쓰고, 공백은 허용되지 앟습니다. _ 문자를 사용 가능합니다."
         password: "글자와 숫자, 대소문자 조합으로 패스워드를 설정하는것이 좋습니다."
         phone: "전화번호는 동료들에게 공개됩니다. 완전하게 기입하여 주십시오. +82가 한국 지역번호 입니다. 010으로 시작하는 번호는 +8210으로 기입하시면 됩니다,  (예시) +821011112222"
-      new:
-        use_this_email: "이 이메일 주소로 프로젝트를 공유할 수 있는 초대권을 받으셨습니다. 만약 이 프로젝트들에 접근하시고 싶으시다면 이메일을 변경하지 말아주세요. 등록 절차를 한번 거치고 나서 이메일 주소를 수정할 수 있습니다."
     new: 
       existing_user_html: "이미 걔정을 가지고 있다면, <a href='%{login_url}'>로그인 하거나</a> 또는 <a href='%{forgot_url}'>아이디 를 찾으세요.</a>."
       no_public_signup: "계정을 만들어야 접속하실 수 있습니다."
