--- a/config/locales/sl.yml
+++ b/config/locales/sl.yml
@@ -144,6 +144,19 @@ sl:
       upload: Naloži
     show: 
       save: "Shrani spremembe"
+  calendar: 
+    abbr_weekdays: 
+      - Ne
+      - Po
+      - Ut
+      - St
+      - Št
+      - Pi
+      - So
+    clear: Vymazať
+    now: Teraz
+    ok: OK
+    today: Dnes
   cards: 
     card: 
       addresses: Naslovi
@@ -598,12 +611,6 @@ sl:
       second: "Sekunda "
       year: Leto
     time_ago: "%{time_ago_in_words} pred"
-  calendar: 
-    abbr_weekdays: [Ne, Po, Ut, St, Št, Pi, So]
-    ok: OK
-    now: Teraz
-    today: Dnes
-    clear: Vymazať
   deleted: 
     conversation: "Odstrani pogovor <b>%{name}</b>"
     page: "Odstrani stran <b>%{name}</b>"
@@ -630,7 +637,6 @@ sl:
       conversation: "Pogovori:"
       due_on: "Rok %{date}"
       my_tasks: "Več opravil določenih v  %{project}"
-      recent_conversations: "Nedavni pogovori v projektu %{project}"
       status: "Posodobitev: %{status}"
       stop_watching: "<a href='%{stop_watching_url}'>Nehaj spremljati</a>ta pogovor."
       task: "Opravilo:"
@@ -639,7 +645,6 @@ sl:
       hey: "Živjo, %{user_name}!"
     upload: 
       file: Datoteka
-      uploaded_by: "naložil "
   example_projects: 
     new: 
       create: "Ustvari primer projekta"
@@ -701,6 +706,7 @@ sl:
     format: 
       delimiter: ","
       separator: "."
+      precision: 2
     human: 
       storage_units: 
         format: "%n %u"
@@ -1081,9 +1087,6 @@ sl:
     form: 
       delete: 
         delete_my_account: "Odstrani moj račun zdaj"
-      picture: 
-        destroy: "Odstrani avatar"
-        field: "Nov avatar"
       biography: "Kratek opis"
       change_password: "Spremeni geslo"
       confirm_password: "Potrdi geslo"
@@ -1094,14 +1097,16 @@ sl:
       last_name: Priimek
       login: "Uporabniško ime"
       monday: Ponedeljkom
-      notifications:
+      notifications: 
         notify_conversations: "Obvesti me, ko nekdo posodobi pogovor, ki ga spremljam."
-        notify_mentions: "Obvesti me, ko me nekdo omeni recimo: Živjo @%{login}! V tem primeru boš prejel/a poštol!"
         notify_tasks: "Obvesti me, ko nekdo posodobi opravilo, ki ga spremljam."
       password: Geslo
       password_confirmation: "Potrdi geslo"
       phone: "Telefonska številka"
       phone_for_integration: "Opcijsko, v prihodnosti za SMS obvestila."
+      picture: 
+        destroy: "Odstrani avatar"
+        field: "Nov avatar"
       sunday: Nedeljo
       time_zone: "Časovni pas"
       tooltips: 
